Добавили ограничение для комментариев, окно с большим фото не закрывается при фокусе на форме написания комментария и нажатии ESC

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <section class="img-filters  img-filters--inactive  container">
       <h2 class="img-filters__title  visually-hidden">Фильтр фотографий</h2>
       <form class="img-filters__form" action="index.html" method="get" autocomplete="off">
-        <button type=button class="img-filters__button  img-filters__button--active" id="filter-default">По умолчанию</button>
-        <button type=button class="img-filters__button" id="filter-random">Случайные</button>
-        <button type=button class="img-filters__button" id="filter-discussed">Обсуждаемые</button>
+        <button type="button" class="img-filters__button  img-filters__button--active" id="filter-default" tabindex="-1">По умолчанию</button>
+        <button type="button" class="img-filters__button" id="filter-random" tabindex="-1">Случайные</button>
+        <button type="button" class="img-filters__button" id="filter-discussed" tabindex="-1">Обсуждаемые</button>
       </form>
     </section>
 
@@ -171,7 +171,7 @@
           <!-- Форма для отправки комментария -->
           <div class="social__footer">
             <img class="social__picture" src="img/avatar-6.svg" alt="Аватар комментатора фотографии" width="35" height="35">
-            <input type="text" class="social__footer-text" placeholder="Ваш комментарий...">
+            <input type="text" class="social__footer-text" maxlength="140" placeholder="Ваш комментарий...">
             <button type="button" class="social__footer-btn" name="button">Отправить</button>
           </div>
         </div>
