--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
   <script src="js/form.js"></script>
   <script src="js/scale.js"></script>
   <script src="js/effects.js"></script>
+  <script src="js/slider.js"></script>
   <script src="js/validation.js"></script>
 </body>
 </html>
