--- a/index.html
+++ b/index.html
@@ -234,12 +234,13 @@
   </template>
   <script src="js/backend.js"></script>
   <script src="js/utils.js"></script>
-  <script src="js/gallery.js"></script>
   <script src="js/preview.js"></script>
   <script src="js/form.js"></script>
   <script src="js/scale.js"></script>
   <script src="js/effects.js"></script>
   <script src="js/slider.js"></script>
   <script src="js/validation.js"></script>
+  <script src="js/gallery.js"></script>
+  <script src="js/filter.js"></script>
 </body>
 </html>
