--- a/index.html
+++ b/index.html
@@ -236,6 +236,8 @@
   <script src="js/utils.js"></script>
   <script src="js/gallery.js"></script>
   <script src="js/preview.js"></script>
+  <script src="js/debounce.js"></script>
+  <script src="js/filtration.js"></script>
   <script src="js/form.js"></script>
   <script src="js/scale.js"></script>
   <script src="js/effects.js"></script>
